# proteapp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
backend/: pyproject.toml
backend/proteapp/api/: deps.py  fakes.py  main.py
backend/proteapp/api/routes/: animals.py  treatments.py
backend/proteapp/db/: start.py
backend/proteapp/models/: animals.py  treatments.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  fakes.ts  main.ts
frontend/src/components/: BottomDrawer.vue  ButtonWithSubaction.vue  DateInput.vue  SelectorMenu.vue
frontend/src/router/: index.ts
frontend/src/skeleton/: AppHeader.vue  NavigationBar.vue
frontend/src/store/: AnimalStore.ts
frontend/src/views/: AnimalListView.vue  AnimalView.vue  InformView.vue
src/: App.vue  fakes.ts  types.ts
src/components/: BottomDrawer.vue  MultiselectorMenu.vue  ProfileAvatar.vue  SelectorMenu.vue
src/composable/: useFilters.ts
src/config/: NavigationBar.ts
src/modules/Animal/: animal.config.ts
src/modules/Animal/components/: AnimalCard.vue  AnimalDetails.vue  AnimalFiltersMenu.vue  AnimalFiltersMenuButton.vue  AnimalImage.vue  SkeletonAnimalCard.vue
src/modules/Animal/composable/: useAnimalFilters.ts
src/router/: index.ts
src/store/: AnimalStore.ts  AppointmentStore.ts  TreatmentStore.ts  UserStore.ts
src/views/: AnimalListView.vue  AnimalTreatmentsView.vue  AnimalView.vue  HomeView.vue  InformView.vue  ProfileView.vue  ShiftView.vue
(+2 files in other folders)
